# ChangeLog for dev-python/ipython
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.51 2008/07/18 13:28:25 tester Exp $

  18 Jul 2008; Olivier Crête <tester@gentoo.org> ipython-0.8.2.ebuild:
  Stable on amd64, bug #212241

  13 Jul 2008; Joseph Jezak <josejx@gentoo.org> ipython-0.8.2.ebuild:
  Marked ppc stable for bug #212241.

  10 Jul 2008; Christian Faulhammer <opfer@gentoo.org> ipython-0.8.2.ebuild:
  stable x86, bug 212241

  09 Jul 2008; Markus Rothe <corsair@gentoo.org> ipython-0.8.2.ebuild:
  Stable on ppc64; bug #212241

*ipython-0.8.4-r1 (06 Jul 2008)

  06 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/ipython-0.8.4-jobctrl.patch, +ipython-0.8.4-r1.ebuild:
  Added patch fixing recurring WindowsError, doc install cleaning.

*ipython-0.8.4 (26 Jun 2008)

  26 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/ipython-0.8.4-globalpath.patch, +ipython-0.8.4.ebuild:
  Version bump

  23 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> ipython-0.8.2.ebuild:
  Corrected emacs-dependency (bug #208186, thanks to ulm).

*ipython-0.8.2 (12 Dec 2007)

  12 Dec 2007; Ali Polatel <hawking@gentoo.org> +ipython-0.8.2.ebuild:
  Version bump, modified emacs depend for emacs-22

*ipython-0.8.1-r1 (24 Oct 2007)

  24 Oct 2007; Ali Polatel <hawking@gentoo.org> files/62ipython-gentoo.el,
  -ipython-0.8.1.ebuild, +ipython-0.8.1-r1.ebuild:
  revbump. fixed site-init file (bug 196859), run
  distutils_pkg_postinst/postrm. drop old

  19 Sep 2007; Ali Polatel <hawking@gentoo.org> ipython-0.6.15.ebuild:
  updated SRC_URI; bug 192906

  26 Jul 2007; Markus Rothe <corsair@gentoo.org> ipython-0.8.1.ebuild:
  Added ~ppc64; bug #186188

*ipython-0.8.1 (10 May 2007)

  10 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -ipython-0.7.3-r2.ebuild, -ipython-0.7.3-r3.ebuild, -ipython-0.8.0.ebuild,
  +ipython-0.8.1.ebuild:
  Version bump. Dropped old versions.
