@@ -5,20 +5,17 @@ AUX 62ipython-gentoo.el 127 RMD160 01a862c77ce09ef0d1613504607db4fa5d840dc1 SHA1
 AUX ipython-0.8.4-globalpath.patch 332 RMD160 67ed95ce729178967cc9b52004adcb5058d75700 SHA1 7884741daa94850aaf527b2a8a953d493ac4c808 SHA256 87cb169d26567f8b4eabc4d4337307e07f7ee780fb7da716350677208ef5a15e
 AUX ipython-0.8.4-jobctrl.patch 826 RMD160 ec925350efc1eb82da1939754585ee9c54b6a2dc SHA1 7a2933175cbe3dd034f7fb87a2b4e13b40257950 SHA256 613080f5511647adb449fbd4f2f48d64550c99d90802a22ec47a8cc453d64853
 DIST ipython-0.6.15.tar.gz 888905 RMD160 cb9cb2fe3e4ae5fdc4017fc6b03ea719516611b2 SHA1 c15cfdf957d46f17d23af6cf53d5b08dca15d93d SHA256 99a3aad3d4e30aca1050343ff4410782ab47f94a33bff568fbc3a841981e2980
-DIST ipython-0.8.1.tar.gz 1127745 RMD160 974a7584471c3559a8c56d60bc85715f3fd3e079 SHA1 90320436c7c09f778c904553520327cbbfd2d8c6 SHA256 7d1cbcee101434d56dcc989fcb4e16f1eade060ededa982d0491031206dc6dbe
 DIST ipython-0.8.2.tar.gz 1172098 RMD160 976d8512d68ed4e1bf28ab50e90bcb7777c34e53 SHA1 2923c1f790d41aeacd2442af5de8ab61c43f6167 SHA256 cc673c7cdef38f7ab21ee22e7be5a591b6b6eda590b82f71a74ff8b5103831c4
 DIST ipython-0.8.4.tar.gz 1161945 RMD160 345c3461f4166ec495eb84c582cf65c5bb11d6e2 SHA1 68b7666d2c552fe2f5f873cb06ee8823e7165f8e SHA256 8e66b67913415ecb29366e20d37929922e9df2a33e52684dd9cdfdccec867c3e
 EBUILD ipython-0.6.15.ebuild 564 RMD160 5f6618c525a0ee3d5eea01679c4b0669fa36c06a SHA1 90a9fffd9668881174fb8bccb56a3346c12a0280 SHA256 dc4ad87b322484a575740e69cf1b28b6f11e4dc921f2ba6a368f6eb5dda24704
-EBUILD ipython-0.8.1-r1.ebuild 1548 RMD160 94aaf9043e355582c72bdce4a561289112611dee SHA1 f07cdf46f5dae391d4fee7b9611b87e78392b296 SHA256 279108b12282a3aa110b753d0b3f8c2be6ed45c54a6811538e2d86fbb145e8df
-EBUILD ipython-0.8.2.ebuild 1540 RMD160 7ec31052c61b1d6893a9b91567ae8402fabcffd1 SHA1 a8df3b25ed559b7eff3398bd2daf72e09558f052 SHA256 4c07b634c9de145070f6ceefbe1df8ac347a1eb50fae9fc61f54f7559b266e61
-EBUILD ipython-0.8.4-r1.ebuild 1683 RMD160 41cedc3c77e728b64e8e744daf9312125c54c923 SHA1 15ec8cc99fa0e842319c470b65ce842bf5dd4a9c SHA256 af90d9bfe5585287982c397121b5ef16fde2a2f5db474e98d269c5f64dbb23e0
-EBUILD ipython-0.8.4.ebuild 1633 RMD160 65e9dbf2d1d7de0e87dbaaba6d7152e8bc6745bb SHA1 e4a4cec9bc13c8b0fdf1d6be0ad5bc32066260cb SHA256 851b3e39e9d6d62e3869ec9598379dae4ba79d1bef0ab7294c6f80f7303f851b
-MISC ChangeLog 8508 RMD160 9639bef55105ed593d23a6608de4c31cf7c09d88 SHA1 785f9a4672994d06c9d1ed5e617077209b553610 SHA256 65bb792716e71e28b3dffeabb9b45af2aac54fb04f95d2773ad7bea6f911052a
+EBUILD ipython-0.8.2.ebuild 1542 RMD160 9b10b1df73312db2cfef98a7ba0759780a4e4274 SHA1 d00e1e3b4e2151fd44f80e65e3680051975172bf SHA256 1071248e942d752f2f22d25eacb90d539992f0cf55f524aad1602fc8f3dc2910
+EBUILD ipython-0.8.4-r1.ebuild 1683 RMD160 09a92f26494072e3ed5103b455d5c57e5dbdf50b SHA1 ae5f0e3cb4bf24592de98c976ce12126891c9225 SHA256 c3d396d7c3fa3f87f30cb8fb64757776797c4d096aaeae7f6c336d1859f487a5
+MISC ChangeLog 8718 RMD160 00d5d5128ff25022ba89f8b82ca5fdfed41aad0c SHA1 3ede878204454e95062a05d2e411ea6a8c2e3a4f SHA256 eaa33b4e59339723c51ae67ead754034b930293559a963e38ad2492787e0d133
 MISC metadata.xml 2253 RMD160 11b7d3c6141b2b4954c942f490e154fa377af775 SHA1 9fbb4853f4f52d1430fabe006a453e0d26dabbff SHA256 cad8d0fb7419d230ecc674fd8b855926903f2343bc1eaeb6f2e0fd4fe3713827
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiAmn4ACgkQ+IXOQtHLm/gr8wCbB4vCKs4KIjUg/CNAJMMRdB8b
-MfIAn1kdu+4sqarr7cdaoju0BkMO2QqN
-=wg26
+iEYEARECAAYFAkiycXEACgkQQU4yORhF8iDGkQCeId3YSyLZWXRvmMMD71N5P0Vg
+KikAn0VXBUWWWGDMSNes+ILYrdUm3dp5
+=+Glp
 -----END PGP SIGNATURE-----
